--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 }
 
 body{
-    font-family: "Montserrat-regular";
+    font-family: "Montserrat";
     background-color: #FFFFFF;
     margin: 0;
 }
